--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.example.aredoweknow">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
 
     <application
         android:allowBackup="true"
@@ -11,10 +14,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/shoppy_icons_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ShopyyTheme">
+        android:theme="@style/Theme.ShopyyTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m" >
+
+        <activity
+            android:name=".Web"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".StoreName"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".Login"
             android:exported="false"
@@ -34,7 +47,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
+            tools:ignore="LockedOrientationActivity" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
