--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
     package="com.example.aredoweknow">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,13 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopyyTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m" >
-
+        tools:targetApi="m">
+        <activity
+            android:name=".DashboardNew"
+            android:exported="false"
+            android:label="@string/title_activity_dashboard_new"
+            android:theme="@style/Theme.ShopyyTheme.NoActionBar" />
         <activity
             android:name=".Web"
             android:exported="false"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".StoreName"
             android:exported="false"
@@ -47,8 +50,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" >
-
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
