--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.google.android.material:material:1.5.0'
 
 }
